added more details of candidate and img

--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -4,9 +4,9 @@
 	<string-array name="assembly_filter_array">
 		<item>dharapuram</item>
 		<item>tirupur</item>
-		<item>palladam</item>
-		<item>Alandur</item>
-		<item>Alangudi</item>
+		<item>Palladam</item>
+		<item>Nagercoil</item>
+		<item>Colachal</item>
 	</string-array>
 
 </resources>
