--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -109,9 +109,20 @@
                 android:onClick="showVideo"
                 />
 
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@+id/name_label"
+                app:layout_constraintTop_toBottomOf="@+id/video_url"
+                android:onClick="downloadPdf"
+                />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+
+
     </LinearLayout>
+
 
 
 </LinearLayout>
