--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -30,9 +30,10 @@
 
     <LinearLayout
         android:weightSum="10"
+        android:layout_weight="9"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp">
 
         <ImageView
             android:id="@+id/profile_photo"
@@ -41,85 +42,234 @@
             android:layout_weight="3"
             android:src="@drawable/profile_avatar"/>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:padding="10dp"
             android:layout_weight="7"
             android:layout_width="match_parent"
             android:orientation="vertical"
             android:layout_height="0dp">
 
-            <com.example.tnelection2021.views.RubikMediumTextView
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:id="@+id/name_label"
-                tools:text="Name :"
-                android:textSize="18sp"
-                android:textColor="@color/primaryTextColor"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <com.example.tnelection2021.views.RubikMediumTextView
-                android:id="@+id/name"
-                tools:text="Modi Ji"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_marginStart="10dp"
-                app:layout_constraintStart_toEndOf="@+id/name_label"
-                app:layout_constraintTop_toTopOf="parent"
-                android:textColor="@color/primaryTextColor"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                <TextView
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:id="@+id/name_label"
+                    android:text="Name :"
+                    android:textSize="18sp"
+                    android:textColor="@color/primaryTextColor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
 
-            <com.example.tnelection2021.views.RubikMediumTextView
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/name_label"
-                android:id="@+id/party_label"
-                tools:text="Party :"
-                android:textSize="18sp"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/primaryTextColor"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                <TextView
+                    android:id="@+id/name"
+                    tools:text="Modi Ji"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:layout_marginStart="10dp"
+                    app:layout_constraintStart_toEndOf="@+id/name_label"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:textColor="@color/primaryTextColor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
 
-            <com.example.tnelection2021.views.RubikMediumTextView
-                android:id="@+id/party"
-                tools:text="Independent"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                app:layout_constraintStart_toEndOf="@+id/name_label"
-                app:layout_constraintTop_toBottomOf="@+id/name_label"
-                android:textColor="@color/primaryTextColor"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+            </LinearLayout>
 
-            <com.example.tnelection2021.views.RubikMediumTextView
-                android:id="@+id/video_url"
-                tools:text="video_url"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                app:layout_constraintStart_toEndOf="@+id/name_label"
-                app:layout_constraintTop_toBottomOf="@+id/party_label"
-                android:textColor="@color/primaryTextColor"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="showVideo"
-                />
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintStart_toEndOf="@+id/name_label"
-                app:layout_constraintTop_toBottomOf="@+id/video_url"
-                android:onClick="downloadPdf"
-                />
+                <TextView
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/name_label"
+                    android:id="@+id/party_label"
+                    android:text="Party :"
+                    android:textSize="18sp"
+                    android:layout_marginTop="10dp"
+                    android:textColor="@color/primaryTextColor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <TextView
+                    android:id="@+id/party"
+                    tools:text="Independent"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintStart_toEndOf="@+id/name_label"
+                    app:layout_constraintTop_toBottomOf="@+id/name_label"
+                    android:textColor="@color/primaryTextColor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/name_label"
+                    android:id="@+id/age_label"
+                    android:text="Age :"
+                    android:textSize="18sp"
+                    android:layout_marginTop="10dp"
+                    android:textColor="@color/primaryTextColor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:id="@+id/age"
+                    tools:text="32"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintStart_toEndOf="@+id/name_label"
+                    app:layout_constraintTop_toBottomOf="@+id/name_label"
+                    android:textColor="@color/primaryTextColor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/name_label"
+                    android:id="@+id/gender_label"
+                    android:text="Gender :"
+                    android:textSize="18sp"
+                    android:layout_marginTop="10dp"
+                    android:textColor="@color/primaryTextColor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:id="@+id/gender"
+                    tools:text="Male"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintStart_toEndOf="@+id/name_label"
+                    app:layout_constraintTop_toBottomOf="@+id/name_label"
+                    android:textColor="@color/primaryTextColor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/name_label"
+                    android:id="@+id/f_h_name_label"
+                    android:text="Father/Husband Name :"
+                    android:textSize="18sp"
+                    android:layout_marginTop="10dp"
+                    android:textColor="@color/primaryTextColor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:id="@+id/f_h_name"
+                    tools:text="Modi Ji"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintStart_toEndOf="@+id/name_label"
+                    app:layout_constraintTop_toBottomOf="@+id/name_label"
+                    android:textColor="@color/primaryTextColor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/name_label"
+                    android:id="@+id/address_label"
+                    android:text="Address :"
+                    android:textSize="18sp"
+                    android:layout_marginTop="10dp"
+                    android:textColor="@color/primaryTextColor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:id="@+id/address"
+                    tools:text="Modi Ji"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintStart_toEndOf="@+id/name_label"
+                    app:layout_constraintTop_toBottomOf="@+id/name_label"
+                    android:textColor="@color/primaryTextColor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
 
 
+        </LinearLayout>
+
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_weight="1"
+        android:padding="10dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:layout_height="0dp">
+
+        <Button
+            android:text="Download PDF"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:padding="5dp"
+            android:layout_marginEnd="10dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@+id/name_label"
+            app:layout_constraintTop_toBottomOf="@+id/video_url"
+            android:onClick="downloadPdf" />
+
+        <Button
+            android:id="@+id/watch_video"
+            android:text="Watch Video"
+            android:layout_width="0dp"
+            android:padding="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:layout_constraintStart_toEndOf="@+id/name_label"
+            app:layout_constraintTop_toBottomOf="@+id/video_url"
+            android:onClick="showVideo" />
 
     </LinearLayout>
 
