details activity handled

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -253,6 +253,8 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:padding="5dp"
+            android:textColor="@color/white"
+            android:background="@color/colorPrimary_black"
             android:layout_marginEnd="10dp"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toEndOf="@+id/name_label"
@@ -264,6 +266,8 @@
             android:text="Watch Video"
             android:layout_width="0dp"
             android:padding="5dp"
+            android:textColor="@color/white"
+            android:background="@color/colorPrimary_black"
             android:layout_marginStart="10dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
