--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
@@ -9,7 +9,7 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-
+        android:id="@+id/top_view"
         android:padding="10dp"
         android:gravity="center"
         android:background="@color/light_green"
@@ -30,12 +30,12 @@
             android:layout_marginStart="10dp"
             android:drawSelectorOnTop="true"
             android:gravity="end"
-            android:spinnerMode="dropdown"
-            android:entries="@array/assembly_filter_array" />
+            android:spinnerMode="dropdown" />
 
     </LinearLayout>
 
     <LinearLayout
+        android:layout_below="@+id/top_view"
         android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -50,5 +50,19 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/progess_bar"
+        android:gravity="center"
+        tools:visibility="gone"
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-</LinearLayout>
+        <ProgressBar
+            android:layout_width="50dp"
+            android:layout_height="match_parent">
+        </ProgressBar>
+    </LinearLayout>
+
+
+</RelativeLayout>
