--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -6,7 +6,7 @@
     android:layout_marginTop="10dp"
     android:layout_marginStart="10dp"
     android:layout_marginEnd="10dp"
-    android:padding="10dp"
+    android:paddingEnd="10dp"
     android:foreground="?attr/selectableItemBackground"
     android:background="@color/backgroundColor"
     android:layout_width="match_parent"
@@ -21,32 +21,23 @@
         <ImageView
             android:id="@+id/profile_photo"
             android:layout_width="0dp"
-            android:layout_height="75dp"
-            android:layout_weight="3"
+            android:layout_height="100dp"
+            android:layout_weight="2"
             android:src="@drawable/profile_avatar"/>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:padding="10dp"
-            android:layout_weight="6"
+            android:layout_weight="7.3"
             android:layout_width="0dp"
             android:orientation="vertical"
             android:layout_height="match_parent">
 
-            <com.example.tnelection2021.views.RubikMediumTextView
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:id="@+id/name_label"
-                tools:text="Name :"
-                android:textSize="18sp"
-                android:textColor="@color/primaryTextColor"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <com.example.tnelection2021.views.RubikMediumTextView
+            <TextView
                 android:id="@+id/name"
                 tools:text="Modi Ji"
                 android:textSize="18sp"
                 android:textStyle="bold"
+                android:singleLine="true"
                 android:layout_marginStart="10dp"
                 app:layout_constraintStart_toEndOf="@+id/name_label"
                 app:layout_constraintTop_toTopOf="parent"
@@ -54,31 +45,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
-            <com.example.tnelection2021.views.RubikMediumTextView
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/name_label"
-                android:id="@+id/party_label"
-                tools:text="Party :"
-                android:textSize="18sp"
-                android:layout_marginTop="10dp"
-                android:textColor="@color/primaryTextColor"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-            <com.example.tnelection2021.views.RubikMediumTextView
+            <TextView
                 android:id="@+id/party"
                 tools:text="Independent"
                 android:textSize="18sp"
-                android:textStyle="bold"
+                android:singleLine="true"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
+                android:letterSpacing="0.05"
                 app:layout_constraintStart_toEndOf="@+id/name_label"
                 app:layout_constraintTop_toBottomOf="@+id/name_label"
                 android:textColor="@color/primaryTextColor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/view_more"
