--- a/app/src/main/res/layout/simple_spinner_item.xml
+++ b/app/src/main/res/layout/simple_spinner_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.tnelection2021.views.RubikMediumTextView
+<TextView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@android:id/text1"
@@ -7,11 +7,11 @@
     tools:text="@string/app_name"
     android:paddingStart="25dp"
     android:paddingEnd="20dp"
-    android:textColor="@color/primaryTextColor"
+    android:textColor="@color/white"
     style="?android:attr/spinnerDropDownItemStyle"
     android:layout_width="match_parent"
     android:layout_height="?attr/dropdownListPreferredItemHeight"
     android:ellipsize="marquee"
     android:singleLine="true">
 
-</com.example.tnelection2021.views.RubikMediumTextView>
+</TextView>
