--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
@@ -28,225 +28,226 @@
 
 <!--    </androidx.appcompat.widget.Toolbar>-->
 
-    <LinearLayout
-        android:weightSum="10"
-        android:layout_weight="9"
-        android:orientation="vertical"
+    <ScrollView
+        android:layout_above="@+id/bottom_option"
         android:layout_width="match_parent"
-        android:layout_height="0dp">
-
-        <ImageView
-            android:id="@+id/profile_photo"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="3"
-            android:src="@drawable/profile_avatar"/>
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:padding="10dp"
-            android:layout_weight="7"
-            android:layout_width="match_parent"
             android:orientation="vertical"
-            android:layout_height="0dp">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/profile_photo"
+                android:layout_width="match_parent"
+                android:layout_height="170dp"
+                android:src="@drawable/profile_avatar"/>
 
             <LinearLayout
-                android:orientation="horizontal"
+                android:padding="10dp"
+                android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
+                android:orientation="vertical"
                 android:layout_height="wrap_content">
 
-                <TextView
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:id="@+id/name_label"
-                    android:text="Name :"
-                    android:textSize="18sp"
-                    android:textColor="@color/primaryTextColor"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                <LinearLayout
+                    android:padding="10dp"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/name"
-                    tools:text="Modi Ji"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:layout_marginStart="10dp"
-                    app:layout_constraintStart_toEndOf="@+id/name_label"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:textColor="@color/primaryTextColor"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    <TextView
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:id="@+id/name_label"
+                        android:text="Name :"
+                        android:textSize="18sp"
+                        android:textColor="@color/primaryTextColor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:id="@+id/name"
+                        tools:text="Modi Ji"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        android:layout_marginStart="10dp"
+                        app:layout_constraintStart_toEndOf="@+id/name_label"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:textColor="@color/primaryTextColor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:padding="10dp"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/name_label"
+                        android:id="@+id/party_label"
+                        android:text="Party :"
+                        android:textSize="18sp"
+                        android:textColor="@color/primaryTextColor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:id="@+id/party"
+                        tools:text="Independent"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        android:layout_marginStart="10dp"
+                        app:layout_constraintStart_toEndOf="@+id/name_label"
+                        app:layout_constraintTop_toBottomOf="@+id/name_label"
+                        android:textColor="@color/primaryTextColor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:padding="10dp"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/name_label"
+                        android:id="@+id/age_label"
+                        android:text="Age :"
+                        android:textSize="18sp"
+                        android:textColor="@color/primaryTextColor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:id="@+id/age"
+                        tools:text="32"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        android:layout_marginStart="10dp"
+                        app:layout_constraintStart_toEndOf="@+id/name_label"
+                        app:layout_constraintTop_toBottomOf="@+id/name_label"
+                        android:textColor="@color/primaryTextColor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:padding="10dp"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/name_label"
+                        android:id="@+id/gender_label"
+                        android:text="Gender :"
+                        android:textSize="18sp"
+                        android:textColor="@color/primaryTextColor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:id="@+id/gender"
+                        tools:text="Male"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        android:layout_marginStart="10dp"
+                        app:layout_constraintStart_toEndOf="@+id/name_label"
+                        app:layout_constraintTop_toBottomOf="@+id/name_label"
+                        android:textColor="@color/primaryTextColor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:padding="10dp"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/name_label"
+                        android:id="@+id/f_h_name_label"
+                        android:text="Father/Husband Name :"
+                        android:textSize="18sp"
+                        android:textColor="@color/primaryTextColor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:id="@+id/f_h_name"
+                        tools:text="Modi Ji"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        android:layout_marginStart="10dp"
+                        app:layout_constraintStart_toEndOf="@+id/name_label"
+                        app:layout_constraintTop_toBottomOf="@+id/name_label"
+                        android:textColor="@color/primaryTextColor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:padding="10dp"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/name_label"
+                        android:id="@+id/address_label"
+                        android:text="Address :"
+                        android:textSize="18sp"
+                        android:textColor="@color/primaryTextColor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:id="@+id/address"
+                        tools:text="Modi Ji"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        android:layout_marginStart="10dp"
+                        app:layout_constraintStart_toEndOf="@+id/name_label"
+                        app:layout_constraintTop_toBottomOf="@+id/name_label"
+                        android:textColor="@color/primaryTextColor"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
 
             </LinearLayout>
 
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/name_label"
-                    android:id="@+id/party_label"
-                    android:text="Party :"
-                    android:textSize="18sp"
-                    android:layout_marginTop="10dp"
-                    android:textColor="@color/primaryTextColor"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-                <TextView
-                    android:id="@+id/party"
-                    tools:text="Independent"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    app:layout_constraintStart_toEndOf="@+id/name_label"
-                    app:layout_constraintTop_toBottomOf="@+id/name_label"
-                    android:textColor="@color/primaryTextColor"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/name_label"
-                    android:id="@+id/age_label"
-                    android:text="Age :"
-                    android:textSize="18sp"
-                    android:layout_marginTop="10dp"
-                    android:textColor="@color/primaryTextColor"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-                <TextView
-                    android:id="@+id/age"
-                    tools:text="32"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    app:layout_constraintStart_toEndOf="@+id/name_label"
-                    app:layout_constraintTop_toBottomOf="@+id/name_label"
-                    android:textColor="@color/primaryTextColor"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/name_label"
-                    android:id="@+id/gender_label"
-                    android:text="Gender :"
-                    android:textSize="18sp"
-                    android:layout_marginTop="10dp"
-                    android:textColor="@color/primaryTextColor"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-                <TextView
-                    android:id="@+id/gender"
-                    tools:text="Male"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    app:layout_constraintStart_toEndOf="@+id/name_label"
-                    app:layout_constraintTop_toBottomOf="@+id/name_label"
-                    android:textColor="@color/primaryTextColor"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/name_label"
-                    android:id="@+id/f_h_name_label"
-                    android:text="Father/Husband Name :"
-                    android:textSize="18sp"
-                    android:layout_marginTop="10dp"
-                    android:textColor="@color/primaryTextColor"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-                <TextView
-                    android:id="@+id/f_h_name"
-                    tools:text="Modi Ji"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    app:layout_constraintStart_toEndOf="@+id/name_label"
-                    app:layout_constraintTop_toBottomOf="@+id/name_label"
-                    android:textColor="@color/primaryTextColor"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/name_label"
-                    android:id="@+id/address_label"
-                    android:text="Address :"
-                    android:textSize="18sp"
-                    android:layout_marginTop="10dp"
-                    android:textColor="@color/primaryTextColor"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-                <TextView
-                    android:id="@+id/address"
-                    tools:text="Modi Ji"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    app:layout_constraintStart_toEndOf="@+id/name_label"
-                    app:layout_constraintTop_toBottomOf="@+id/name_label"
-                    android:textColor="@color/primaryTextColor"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-            </LinearLayout>
 
 
         </LinearLayout>
-
-
-
-    </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
+        android:id="@+id/bottom_option"
         android:layout_weight="1"
         android:padding="10dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:gravity="center"
-        android:layout_height="0dp">
+        android:layout_alignParentBottom="true"
+        android:layout_height="wrap_content">
 
         <Button
             android:text="Download PDF"
@@ -279,4 +280,4 @@
 
 
 
-</LinearLayout>
+</RelativeLayout>
